<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/background_bottomsheet"
    android:gravity="center_horizontal"
    android:clipToPadding="false">

    <!-- Título -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InicioSesionB"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/textPrimary"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReconFragInicio"
        android:textSize="14sp"
        android:textColor="@color/textSecundary"
        android:gravity="center"
        android:paddingBottom="24dp" />

    <!-- Botón Google -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Google"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/google"
        app:iconPadding="12dp"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:cornerRadius="20dp"
        android:backgroundTint="@android:color/white"
        android:elevation="8dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Botón Facebook -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Facebook"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/facebook"
        app:iconPadding="12dp"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:cornerRadius="20dp"
        android:backgroundTint="@android:color/white"
        android:elevation="8dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Botón Usuario -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUsuario"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/User"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/user"
        app:iconPadding="12dp"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:cornerRadius="20dp"
        android:backgroundTint="@android:color/white"
        android:elevation="8dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Registro -->
    <LinearLayout
        android:id="@+id/registroContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/btnAcceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPregunta"
            android:textColor="@color/textRegistro"
            android:letterSpacing="0.10"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/btnRegistroClickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:clickable="true"
            android:focusable="true"
            android:letterSpacing="0.10"
            android:minHeight="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/txtRegistro"
            android:textColor="@color/textRegistrobtn"
            android:textSize="12dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>


</LinearLayout>
