<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dinamico">


    <TextView
        android:id="@+id/btnOmitir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoBooky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/booky_logo"
        android:src="@drawable/booky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOmitir" />

    <ImageView
        android:id="@+id/imgIlustracion"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/onboarding_image_descB"
        android:src="@drawable/bienvenida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoBooky" />

    <!-- Descripción -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/onboarding_title_d"
        android:textColor="@color/textPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgIlustracion" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_desc_d"
        android:textAlignment="center"
        android:textColor="@color/textSecundary"
        android:textSize="21sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAcceder"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_acceso"
        android:text="@string/txtAcceso"
        android:textColor="@color/textbtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescripcion" />

    <LinearLayout
        android:id="@+id/registroContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnAcceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPregunta"
            android:textColor="@color/textRegistro"
            android:letterSpacing="0.10"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnRegistroClickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginHorizontal="6dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/txtRegistro"
            android:textColor="@color/textRegistrobtn"
            android:textSize="14sp"
            android:letterSpacing="0.10"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
