<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dinamico">

    <ImageView
        android:id="@+id/imgOnboardingA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/onboarding_image_desc"
        android:rotation="-15"
        android:src="@drawable/onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/paginationIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/imgOnboardingA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/pager_dot_inactive" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/pager_dot_inactive" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/pager_dot_active" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/pager_dot_inactive" />
    </LinearLayout>

    <!-- Contenedor de textos -->
    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="343dp"
        android:layout_height="162dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paginationIndicator"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onboarding_title_c"
            android:textColor="@color/textPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/onboarding_desc_c"
            android:textAlignment="center"
            android:textColor="@color/textSecundary"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
